[package]
name = "discord-rpc-rs"
version = "0.1.0"
authors = ["xhayper <hayper1919@gmail.com>", "RoootTheFox <rooot@foxes4life.net>"]
keywords = ["discord", "discord-rpc", "discord-ipc", "ipc", "rpc", "rich-presence"]
edition = "2021"

[dependencies]
tokio = "1.20.1"

[target.'cfg(windows)'.dependencies]
named_pipe = "0.4.1"

[dependencies.uuid]
version = "^0.6.2"
features = ["v4"]
